@@ -49,6 +49,14 @@ SafeArrayCreateVectorEx = _oleaut32.SafeArrayCreateVectorEx
 SafeArrayCreateVectorEx.restype = POINTER(SAFEARRAY)
 SafeArrayCreateVectorEx.argtypes = [VARTYPE, LONG, DWORD, PVOID]
 
+SafeArrayCreateEx = _oleaut32.SafeArrayCreateEx
+SafeArrayCreateEx.restype = POINTER(SAFEARRAY)
+SafeArrayCreateEx.argtypes = [VARTYPE, c_uint, POINTER(SAFEARRAYBOUND), PVOID]
+
+SafeArrayCreate = _oleaut32.SafeArrayCreate
+SafeArrayCreate.restype = POINTER(SAFEARRAY)
+SafeArrayCreate.argtypes = [VARTYPE, c_uint, POINTER(SAFEARRAYBOUND)]
+
 SafeArrayUnaccessData = _oleaut32.SafeArrayUnaccessData
 SafeArrayUnaccessData.restype = HRESULT
 SafeArrayUnaccessData.argtypes = [POINTER(SAFEARRAY)]
